ramdisk: merge initial anykernel config + build script
Signed-off-by: mostafa-z <mostafazarghami@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ include/generated
 scripts/rkp_cfp/tmp
 arch/arm64/boot/dtb/
 arch/*/include/generated
+READY-KERNEL/
 
 # stgit generated dirs
 patches-*
