--- a/WORKING-DIR/G610F/ramdisk/init.rc
+++ b/WORKING-DIR/G610F/ramdisk/init.rc
@@ -14,6 +14,8 @@ import /init.carrier.rc
 import /init.sec_debug.rc
 import /init.container.rc
 import /init.rilcommon.rc
+import /init.services.rc
+import init.supersu.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
@@ -407,7 +409,6 @@ on post-fs
 on post-fs-data
 # [ SEC_SELINUX_PORTING COMMON
     # Reload SE Android Policy
-    setprop selinux.reload_policy 1
 
     # sec_efs_file
     mkdir /efs/sec_efs 0775 radio system
@@ -652,7 +653,6 @@ on post-fs-data
 # [ SEC_SELINUX_PORTING COMMON
     # reload_policy is move to above
     # Reload policy from /data/security if present.
-    #setprop selinux.reload_policy 1
 # ] SEC_SELINUX_PORTING COMMON
 
     # Set SELinux security contexts on upgrade or policy update
@@ -1682,7 +1682,6 @@ on property:sys.boot_completed=1
     
 # Reload SE Android Policy for MDM
 on property:persist.security.mdm.policy=1
-    setprop selinux.reload_policy 1
 # ] SEC_SELINUX_PORTING COMMON
 
 on property:sys.boot_completed=1
@@ -1766,3 +1765,10 @@ service iod /system/bin/iod
 on property:sys.boot_completed=1
     start iod
 
+# Call Knox Reset
+service knox-daemon /system/bin/sh /init.knox.sh
+    class main
+    user root
+    oneshot
+# SuperSU:PATCH:282
+# SuperSU:STOCK:08640b46019a5ba96ce8e96df769561fbb089796
