config update after merge

--- a/arch/arm64/configs/gabriel_g610f_defconfig
+++ b/arch/arm64/configs/gabriel_g610f_defconfig
@@ -3355,6 +3355,7 @@ CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
@@ -3892,9 +3893,13 @@ CONFIG_SDFAT_DEBUG=y
 # CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
 CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_EXFAT_SUPPORT_STLOG=y
+# CONFIG_EXFAT_COMPAT_TUXERA is not set
+# CONFIG_EXFAT_COMPAT_UFSD is not set
+# CONFIG_EXFAT_DEBUG is not set
 # CONFIG_NTFS_FS is not set
 
 #
