--- a/WORKING-DIR/G610F/ramdisk/init.samsungexynos7870.rc
+++ b/WORKING-DIR/G610F/ramdisk/init.samsungexynos7870.rc
@@ -854,20 +854,20 @@ on property:persist.sys.storage_preload=0
     start umount_service
 
 # SSWAP
-service swapon /sbin/sswap -s
-    class core
-    user root
-    group root
-    seclabel u:r:sswap:s0
-    oneshot
+#service swapon /sbin/sswap -s
+#    class core
+#    user root
+#    group root
+#    seclabel u:r:sswap:s0
+#    oneshot
 
 # SSWAP
-service swapon /sbin/sswap -s -f 1536
-    class core
-    user root
-    group root
-    seclabel u:r:sswap:s0
-    oneshot
+#service swapon /sbin/sswap -s -f 1536
+#    class core
+#    user root
+#    group root
+#    seclabel u:r:sswap:s0
+#    oneshot
 
 # IMS stack for IMS
 service imsd /system/bin/imsd
