--- a/WORKING-DIR/G610F/ramdisk/init.rc
+++ b/WORKING-DIR/G610F/ramdisk/init.rc
@@ -15,7 +15,7 @@ import /init.sec_debug.rc
 import /init.container.rc
 import /init.rilcommon.rc
 import /init.services.rc
-import init.supersu.rc
+import /init.supersu.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
