ramdisk: private mode fix by gayos, adapted from s7
Signed-off-by: mostafa-z <mostafazarghami@gmail.com>

--- a/WORKING-DIR/G610F/ramdisk/init.rc
+++ b/WORKING-DIR/G610F/ramdisk/init.rc
@@ -14,6 +14,7 @@ import /init.carrier.rc
 import /init.sec_debug.rc
 import /init.container.rc
 import /init.rilcommon.rc
+import /init.secstorage.rc
 import /init.services.rc
 import /init.supersu.rc
 
