ramdisk: add private mode from hero2 to init.7870... adapted from s7
Signed-off-by: mostafa-z <mostafazarghami@gmail.com>

--- a/WORKING-DIR/G610F/ramdisk/init.samsungexynos7870.rc
+++ b/WORKING-DIR/G610F/ramdisk/init.samsungexynos7870.rc
@@ -37,6 +37,13 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
+#Private Mode
+    mkdir /mnt/shell/privatemode 0700 system system
+    mkdir /storage/Private 0000 system system
+    mkdir /data/privatemode 0770 system system
+    chown system system /data/privatemode
+    restorecon /data/privatemode
+
 # /efs/factory.prop for Dual / Single SIM settings
     chown radio radio /efs/factory.prop
     chmod 0600 /efs/factory.prop
