--- a/WORKING-DIR/J710/ramdisk/init.samsungexynos7870.rc
+++ b/WORKING-DIR/J710/ramdisk/init.samsungexynos7870.rc
@@ -35,7 +35,14 @@ on post-fs-data
     chown system system /data/system/gps
     
     setprop vold.post_fs_data_done 1
-    
+
+#Private Mode
+    mkdir /mnt/shell/privatemode 0700 system system
+    mkdir /storage/Private 0000 system system
+    mkdir /data/privatemode 0770 system system
+    chown system system /data/privatemode
+    restorecon /data/privatemode
+
 # /efs/factory.prop for Dual / Single SIM settings
     chown radio radio /efs/factory.prop
     chmod 0600 /efs/factory.prop
