--- a/arch/arm64/configs/gabriel_g610f_defconfig
+++ b/arch/arm64/configs/gabriel_g610f_defconfig
@@ -2846,7 +2846,7 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 #
 CONFIG_USB_DEFAULT_PERSIST=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
-CONFIG_USB_OTG=y
+# CONFIG_USB_OTG is not set
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_OTG_FSM is not set
@@ -2875,7 +2875,7 @@ CONFIG_USB_XHCI_PLATFORM=y
 #
 # USB Device Class drivers
 #
-# CONFIG_USB_ACM is not set
+CONFIG_USB_ACM=y
 # CONFIG_USB_PRINTER is not set
 # CONFIG_USB_WDM is not set
 # CONFIG_USB_TMC is not set
@@ -2922,7 +2922,7 @@ CONFIG_USB_DEBUG_DETAILED_LOG=y
 CONFIG_USB_STORAGE_DETECT=y
 CONFIG_USB_HMT_SAMSUNG_INPUT=y
 # CONFIG_USB_EXTERNAL_NOTIFY is not set
-CONFIG_USB_NOTIFY_PROC_LOG=y
+# CONFIG_USB_NOTIFY_PROC_LOG is not set
 CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_HOST is not set
 # CONFIG_USB_DWC3_GADGET is not set
