--- a/arch/arm64/configs/gabriel_j7xelte_defconfig
+++ b/arch/arm64/configs/gabriel_j7xelte_defconfig
@@ -345,7 +345,14 @@ CONFIG_ARM64_PGTABLE_LEVELS=3
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
-# CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE is not set
+CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE=y
+CONFIG_SCHED_HMP=y
+# CONFIG_SCHED_HMP_PRIO_FILTER is not set
+CONFIG_HMP_FAST_CPU_MASK=""
+CONFIG_HMP_SLOW_CPU_MASK=""
+CONFIG_HMP_VARIABLE_SCALE=y
+CONFIG_HMP_FREQUENCY_INVARIANT_SCALE=y
+# CONFIG_SCHED_HMP_LITTLE_PACKING is not set
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_NONE is not set
