--- a/arch/arm64/configs/gabriel_g610f_defconfig
+++ b/arch/arm64/configs/gabriel_g610f_defconfig
@@ -3377,6 +3377,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder"
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
