--- a/arch/arm64/configs/gabriel_j7xelte_defconfig
+++ b/arch/arm64/configs/gabriel_j7xelte_defconfig
@@ -3378,6 +3378,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder"
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
