--- a/arch/arm64/configs/gabriel_j7xelte_defconfig
+++ b/arch/arm64/configs/gabriel_j7xelte_defconfig
@@ -3933,7 +3933,8 @@ CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 # CONFIG_EXFAT_COMPAT_TUXERA is not set
 # CONFIG_EXFAT_COMPAT_UFSD is not set
 # CONFIG_EXFAT_DEBUG is not set
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
