--- a/arch/arm64/configs/gabriel_j7xelte_defconfig
+++ b/arch/arm64/configs/gabriel_j7xelte_defconfig
@@ -3862,6 +3862,7 @@ CONFIG_EXT3_FS_XATTR=y
 CONFIG_EXT4_FS=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_EXT4_ENCRYPTION=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_SDCARD_FS=y
 CONFIG_SDCARD_FS_CI_SEARCH=y
