--- a/arch/arm64/configs/on7xelteswa_00_defconfig
+++ b/arch/arm64/configs/on7xelteswa_00_defconfig
@@ -3018,6 +3018,7 @@ CONFIG_USB_RNDIS_MULTIPACKET=y
 # CONFIG_UWB is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
+CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_MMC_CLKGATE is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 # CONFIG_MMC_PARANOID_SD_INIT is not set
