--- a/WORKING-DIR/J710/ramdisk/init.rc
+++ b/WORKING-DIR/J710/ramdisk/init.rc
@@ -72,6 +72,31 @@ on init
     mkdir /cache 0770 system cache
     mkdir /config 0500 root root
 
+    # Create energy-aware scheduler tuning nodes
+    mkdir /dev/stune
+    mount cgroup none /dev/stune schedtune
+    mkdir /dev/stune/top-app
+    mkdir /dev/stune/foreground
+    mkdir /dev/stune/background
+    mkdir /dev/stune/system-background
+
+    chown system system /dev/stune
+    chown system system /dev/stune/top-app
+    chown system system /dev/stune/foreground
+    chown system system /dev/stune/background
+    chown system system /dev/stune/system-background
+    chown system system /dev/stune/tasks
+    chown system system /dev/stune/top-app/tasks
+    chown system system /dev/stune/foreground/tasks
+    chown system system /dev/stune/background/tasks
+    chown system system /dev/stune/system-background/tasks
+
+    chmod 0664 /dev/stune/tasks
+    chmod 0664 /dev/stune/top-app/tasks
+    chmod 0664 /dev/stune/foreground/tasks
+    chmod 0664 /dev/stune/background/tasks
+    chmod 0664 /dev/stune/system-background/tasks
+
     # Mount staging areas for devices managed by vold
     mount tmpfs tmpfs /mnt mode=0755,uid=0,gid=1000
     restorecon_recursive /mnt
@@ -163,33 +188,30 @@ on init
     mount cgroup none /dev/cpuctl cpu
     chown system system /dev/cpuctl
     chown system system /dev/cpuctl/tasks
-    chown system system /dev/cpuctl/cpu.cfs_quota_us
     chmod 0666 /dev/cpuctl/tasks
-    chmod 0666 /dev/cpuctl/cpu.cfs_quota_us
     write /dev/cpuctl/cpu.shares 1024
-    write /dev/cpuctl/cpu.rt_runtime_us 800000
     write /dev/cpuctl/cpu.rt_period_us 1000000
+    write /dev/cpuctl/cpu.rt_runtime_us 950000
 
     mkdir /dev/cpuctl/bg_non_interactive
     chown system system /dev/cpuctl/bg_non_interactive/tasks
-    chown system system /dev/cpuctl/bg_non_interactive/cpu.cfs_quota_us
     chmod 0666 /dev/cpuctl/bg_non_interactive/tasks
-    chmod 0666 /dev/cpuctl/bg_non_interactive/cpu.cfs_quota_us
     # 5.0 %
     write /dev/cpuctl/bg_non_interactive/cpu.shares 52
-    write /dev/cpuctl/bg_non_interactive/cpu.rt_runtime_us 700000
     write /dev/cpuctl/bg_non_interactive/cpu.rt_period_us 1000000
+    # active FIFO threads will never be in BG
+    write /dev/cpuctl/bg_non_interactive/cpu.rt_runtime_us 10000
 
     mkdir /dev/cpuctl/bg_cached
     chown system system /dev/cpuctl/bg_cached/tasks
     chown system system /dev/cpuctl/bg_cached/cpu.cfs_period_us
     chown system system /dev/cpuctl/bg_cached/cpu.cfs_quota_us
     chmod 0666 /dev/cpuctl/bg_cached/tasks
-    chmod 0666 /dev/cpuctl/bg_cached/cpu.cfs_period_us
-    chmod 0666 /dev/cpuctl/bg_cached/cpu.cfs_quota_us
+    chmod 0664 /dev/cpuctl/bg_cached/cpu.cfs_period_us
+    chmod 0664 /dev/cpuctl/bg_cached/cpu.cfs_quota_us
     # 5.0 %
     write /dev/cpuctl/bg_cached/cpu.shares 52
-    write /dev/cpuctl/bg_cached/cpu.rt_runtime_us 700000
+    write /dev/cpuctl/bg_cached/cpu.rt_runtime_us 10000
     write /dev/cpuctl/bg_cached/cpu.rt_period_us 1000000
     write /dev/cpuctl/bg_cached/cpu.cfs_period_us 20000
     write /dev/cpuctl/bg_cached/cpu.cfs_quota_us 10000
@@ -199,11 +221,11 @@ on init
     chown system system /dev/cpuctl/bg_abnormal/cpu.cfs_period_us
     chown system system /dev/cpuctl/bg_abnormal/cpu.cfs_quota_us
     chmod 0666 /dev/cpuctl/bg_abnormal/tasks
-    chmod 0666 /dev/cpuctl/bg_abnormal/cpu.cfs_period_us
-    chmod 0666 /dev/cpuctl/bg_abnormal/cpu.cfs_quota_us
+    chmod 0664 /dev/cpuctl/bg_abnormal/cpu.cfs_period_us
+    chmod 0664 /dev/cpuctl/bg_abnormal/cpu.cfs_quota_us
     # 5.0 %
     write /dev/cpuctl/bg_abnormal/cpu.shares 52
-    write /dev/cpuctl/bg_abnormal/cpu.rt_runtime_us 700000
+    write /dev/cpuctl/bg_abnormal/cpu.rt_runtime_us 10000
     write /dev/cpuctl/bg_abnormal/cpu.rt_period_us 1000000
     write /dev/cpuctl/bg_abnormal/cpu.cfs_period_us 20000
     write /dev/cpuctl/bg_abnormal/cpu.cfs_quota_us 10000
@@ -214,68 +236,94 @@ on init
 
     # this ensures that the cpusets are present and usable, but the device's
     # init.rc must actually set the correct cpus
-    mkdir /dev/cpuset/real_fg
-    write /dev/cpuset/real_fg/cpus "0-7"
-    write /dev/cpuset/real_fg/mems 0
+    mkdir /dev/cpuset/top-app
+    write /dev/cpuset/top-app/cpus 0-7
+    write /dev/cpuset/top-app/mems 0
     mkdir /dev/cpuset/foreground
-    write /dev/cpuset/foreground/cpus "0-7"
+    write /dev/cpuset/foreground/cpus 0-2,4-7
     write /dev/cpuset/foreground/mems 0
     mkdir /dev/cpuset/background
-    write /dev/cpuset/background/cpus "1-3"
+    write /dev/cpuset/background/cpus 0-1
     write /dev/cpuset/background/mems 0
     mkdir /dev/cpuset/cached
-    write /dev/cpuset/cached/cpus "1-3"
+    write /dev/cpuset/cached/cpus 1
     write /dev/cpuset/cached/mems 0
     mkdir /dev/cpuset/abnormal
-    write /dev/cpuset/abnormal/cpus "1-3"
+    write /dev/cpuset/abnormal/cpus 1
     write /dev/cpuset/abnormal/mems 0
     mkdir /dev/cpuset/dex2oat
-    write /dev/cpuset/dex2oat/cpus "1-7"
+    write /dev/cpuset/dex2oat/cpus 0-2,4-7
     write /dev/cpuset/dex2oat/mems 0
+    mkdir /dev/cpuset/surfaceflinger
+    write /dev/cpuset/surfaceflinger/cpus 0-2,4-7
+    write /dev/cpuset/surfaceflinger/mems 0
 
     # system-background is for system tasks that should only run on
     # little cores, not on bigs
     # to be used only by init, so don't change system-bg permissions
     mkdir /dev/cpuset/system-background
-    write /dev/cpuset/system-background/cpus "1-3"
+    write /dev/cpuset/system-background/cpus 0-2
     write /dev/cpuset/system-background/mems 0
 
     # change permissions for all cpusets we'll touch at runtime
     chown system system /dev/cpuset
-    chown system system /dev/cpuset/real_fg
+    chown system system /dev/cpuset/top-app
     chown system system /dev/cpuset/foreground
     chown system system /dev/cpuset/background
+    chown system system /dev/cpuset/system-background
     chown system system /dev/cpuset/cached
     chown system system /dev/cpuset/abnormal
     chown system system /dev/cpuset/dex2oat
+    chown system system /dev/cpuset/surfaceflinger
     chown system system /dev/cpuset/tasks
-    chown system system /dev/cpuset/real_fg/tasks
+    chown system system /dev/cpuset/top-app/tasks
     chown system system /dev/cpuset/foreground/tasks
     chown system system /dev/cpuset/background/tasks
+    chown system system /dev/cpuset/system-background/tasks
     chown system system /dev/cpuset/cached/tasks
     chown system system /dev/cpuset/abnormal/tasks
     chown system system /dev/cpuset/dex2oat/tasks
+    chown system system /dev/cpuset/surfaceflinger/tasks
     chown system system /dev/cpuset/cpus
-    chown system system /dev/cpuset/real_fg/cpus
+    chown system system /dev/cpuset/top-app/cpus
     chown system system /dev/cpuset/foreground/cpus
     chown system system /dev/cpuset/background/cpus
+    chown system system /dev/cpuset/system-background/cpus
     chown system system /dev/cpuset/cached/cpus
     chown system system /dev/cpuset/abnormal/cpus
     chown system system /dev/cpuset/dex2oat/cpus
-    chmod 0666 /dev/cpuset/real_fg/tasks
-    chmod 0666 /dev/cpuset/foreground/tasks
-    chmod 0666 /dev/cpuset/background/tasks
-    chmod 0666 /dev/cpuset/cached/tasks
-    chmod 0666 /dev/cpuset/abnormal/tasks
-    chmod 0666 /dev/cpuset/dex2oat/tasks
-    chmod 0666 /dev/cpuset/tasks
-    chmod 0666 /dev/cpuset/real_fg/cpus
-    chmod 0666 /dev/cpuset/foreground/cpus
-    chmod 0666 /dev/cpuset/background/cpus
-    chmod 0666 /dev/cpuset/cached/cpus
-    chmod 0666 /dev/cpuset/abnormal/cpus
-    chmod 0666 /dev/cpuset/dex2oat/cpus
-    chmod 0666 /dev/cpuset/cpus
+    chown system system /dev/cpuset/surfaceflinger/cpus
+
+    # set system-background to 0775 so SurfaceFlinger can touch it
+    chmod 0775 /dev/cpuset/system-background
+    chmod 0775 /dev/cpuset/surfaceflinger
+
+    chmod 0664 /dev/cpuset/top-app/tasks
+    chmod 0664 /dev/cpuset/foreground/tasks
+    chmod 0664 /dev/cpuset/background/tasks
+    chmod 0664 /dev/cpuset/system-background/tasks
+    chmod 0664 /dev/cpuset/cached/tasks
+    chmod 0664 /dev/cpuset/abnormal/tasks
+    chmod 0664 /dev/cpuset/dex2oat/tasks
+    chmod 0664 /dev/cpuset/surfaceflinger/tasks
+    chmod 0664 /dev/cpuset/tasks
+    chmod 0664 /dev/cpuset/top-app/cpus
+    chmod 0664 /dev/cpuset/foreground/cpus
+    chmod 0664 /dev/cpuset/background/cpus
+    chmod 0664 /dev/cpuset/system-background/cpus
+    chmod 0664 /dev/cpuset/cached/cpus
+    chmod 0664 /dev/cpuset/abnormal/cpus
+    chmod 0664 /dev/cpuset/dex2oat/cpus
+    chmod 0664 /dev/cpuset/surfaceflinger/cpus
+    chmod 0664 /dev/cpuset/cpus
+
+    # change own for camera lagging
+    chown system system /sys/kernel/hmp/down_threshold
+    chown system system /sys/kernel/hmp/up_threshold
+
+    # set permission to 0660 for camera lagging
+    chmod 0660 /sys/kernel/hmp/down_threshold
+    chmod 0660 /sys/kernel/hmp/up_threshold
 
     # qtaguid will limit access to specific data based on group memberships.
     #   net_bw_acct grants impersonation of socket owners.
@@ -695,7 +743,7 @@ on boot
     chown root system /sys/module/lowmemorykiller/parameters/adj
     chmod 0220 /sys/module/lowmemorykiller/parameters/adj
     chown root system /sys/module/lowmemorykiller/parameters/minfree
-    chmod 0220 /sys/module/lowmemorykiller/parameters/minfree
+    chmod 0664 /sys/module/lowmemorykiller/parameters/minfree
     # for BT MAC address
     mkdir /efs/bluetooth 0775 radio system
     # if already exist
