--- a/arch/arm64/configs/on7xelte_defconfig
+++ b/arch/arm64/configs/on7xelte_defconfig
@@ -2506,7 +2506,7 @@ CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_DEBUG_SHADER_SPLIT_FS is not set
 # CONFIG_MALI_PLATFORM_FAKE is not set
 CONFIG_MALI_PLATFORM_THIRDPARTY=y
-CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="7870"
+CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="exynos"
 # CONFIG_MALI_DEBUG is not set
 # CONFIG_MALI_NO_MALI is not set
 # CONFIG_MALI_TRACE_TIMELINE is not set
@@ -2517,9 +2517,14 @@ CONFIG_MALI_SYSTRACE_SUPPORT=y
 # CONFIG_MALI_DEVFREQ is not set
 CONFIG_DDK_VERSION_OS="7"
 CONFIG_MALI_T83X=y
-CONFIG_MALI_R12P0=y
-# CONFIG_MALI_R15P0 is not set
-CONFIG_EXYNOS_SOC_NAME=""
+# CONFIG_MALI_R12P0 is not set
+CONFIG_MALI_R15P0=y
+CONFIG_EXYNOS_SOC_NAME="7870"
+CONFIG_MALI_MIDGARD=y
+CONFIG_MALI_SEC_CL_BOOST=y
+CONFIG_MALI_SEC_UTILIZATION=y
+CONFIG_MALI_PM_QOS=y
+CONFIG_MALI_DEBUG_KERNEL_SYSFS=y
 
 #
 # Direct Rendering Manager
